# ws_solution

./: .gitignore  CMakeLists.txt  README.md  build_ws_server.sh  certmanager_qt.pro  certmanager_qt.pro.user.a4b72c7  certmanager_qt.pro.user.b04d64f  deployqt_qml.txt  identifier.sqlite  settings.txt  ws_admin_qt.pro  ws_server.service  ws_server_qt.pro  ws_server_qt.pro.user.a4b72c7  ws_solution.pro
arc_json/: ip.h  (+4 more)
arcirk/: CMakeCache.txt  CMakeLists.txt  Makefile  arcirk.pro  cmake_install.cmake
arcirk/include/: arcirk.h
arcirk/src/: arcirk.cpp  arcirk_ip.cpp  arcirk_json.cpp  arcirk_message.cpp  arcirk_settings.cpp  arcirk_sqlquery.cpp  arcirk_static.cpp
certmanager/CertManager/: CMakeLists.txt  CertManager.pro  CertManager.pro.user.a4b72c7  README.md  certificate.cpp  certificate.h  certmaster.qrc  comanndlineparser.cpp  comanndlineparser.h  commandline.cpp  commandline.h  converter.h  databasemanager.cpp  databasemanager.h  dialogabout.ui  dialogclientoptions.cpp  dialogclientoptions.h  dialogclientoptions.ui  dialogcomputer.cpp  dialogcomputer.h  dialogcomputer.ui  dialogconnection.cpp  dialogconnection.h  dialogconnection.ui  dialogcontainerinfo.cpp  dialogcontainerinfo.h  dialogcontainerinfo.ui  dialogcontainername.cpp  dialogcontainername.h  dialogcontainername.ui  dialogmessage.cpp  dialogmessage.h  dialogmessage.ui  dialogoptions.cpp  dialogoptions.h  dialogoptions.ui  dialogselectdevice.cpp  dialogselectdevice.h  dialogselectdevice.ui  dialogselectedrow.cpp  (+31 more)
mpl/: CMakeLists.txt  MPL.pro  MPL.pro.user.1bd33fc  MPL.pro.user.e66d462  README.md  dialogclientoptions.cpp  dialogclientoptions.h  dialogclientoptions.ui  dialogconnection.cpp  dialogconnection.h  dialogconnection.ui  dialogmainwindow.cpp  dialogmainwindow.h  dialogmainwindow.ui  dialogoptions.cpp  dialogoptions.h  dialogoptions.ui  dialogselectedrow.cpp  dialogselectedrow.h  dialogselectedrow.ui  dialogselectinlist.h  dialogselectinlist.ui  dialogselectprofile.cpp  dialogselectprofile.h  dialogselectprofile.ui  dialogsettings.ui  main.cpp  mpl.qrc  mplsettings.cpp  mplsettings.h  profilemanager.cpp  profilemanager.h  userprofile.cpp  userprofile.h
mpl/singleapplication/: CMakeLists.txt  Windows.md
qt_models/project/: CMakeLists.txt
sqlwrapper/: CMakeLists.txt  arcirk.cpp  arcirk.h  sqlinterface.cpp  sqlinterface.h  sqlqueryinterface.cpp  sqlqueryinterface.h  sqlwrapper.cpp  sqlwrapper.h  sqlwrapper.pro  sqlwrapper_global.h
sqlwrapper/include/: _sqlwrapper.h
tests/test_channels_node/: CMakeLists.txt  index.html  main.cpp  settings.json
wdc/: CMakeLists.txt
wdc/src/: client.cpp
webdav_plugin/: CMakeCache.txt  CMakeLists.txt  bwebdav.cpp  bwebdav.h  bwebdav_api.h
win_service/: CMakeLists.txt  Service.h  ServiceMain.h  ServiceUtils.h  readme.md  service.cpp  ws_service.cpp  ws_service.h
ws_admin/: CMakeLists.txt  dialogselectinlist.cpp  dialogselectinlist.h  dialogselectinlist.ui  httpservice.cpp  httpservice.h  index.html  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  ws_admin.pro  ws_admin.rc
ws_admin/css/: styles.css
ws_admin/form/: aboutdialog.ui  directoryinfobasedialog.ui  groupdialog.ui  optionsdialog.ui  selectgroupdialog.ui  userdialog.ui
ws_admin/include/: clientsettings.h  groupdialog.h  optionsdialog.h  qmlwebsocket.h  selectgroupdialog.h  serveresponse.h  userdialog.h
ws_admin/js/: app.js
ws_admin/os/: get_1c_users.os
ws_admin/src/: aboutdialog.cpp  clientsettings.cpp  directoryinfobasedialog.cpp  groupdialog.cpp  optionsdialog.cpp  qmlwebsocket.cpp  selectgroupdialog.cpp  serveresponse.cpp  userdialog.cpp
ws_admin_qt/ws_admin_qt/: AppSettings.h  CMakeLists.txt  Chat.qml  ChatForm.ui.qml  GroupPage.qml  appSettings.cpp  chatboxdialog.cpp  chatboxdialog.h  chatboxdialog.ui  directoryinfobasedialog.cpp  directoryinfobasedialog.ui  global.h  groupdialog.cpp  groupdialog.h  groupdialog.ui  iws_client.cpp  iws_client.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  optionsdlg.cpp  optionsdlg.h  optionsdlg.ui  resourse.qrc  selectgroupdialog.cpp  selectgroupdialog.h  selectgroupdialog.ui  serveresponse.cpp  serveresponse.h  stdfx.h  userdialog.cpp  userdialog.h  userdialog.ui  usersgroupsmodel.cpp  ws_admin_qt.pro
ws_admin_wx/: CMakeLists.txt
ws_admin_wx/include/: main.h  settings.h  wx_addserver.h  wx_app.h  wx_connect.h  wx_frame.h  wx_panels.h  wx_pch.h
ws_admin_wx/res/: forms.fbp  noname.cpp  noname.h
ws_admin_wx/src/: main.cpp  settings.cpp  ws_connect.cpp  wx_addserver.cpp  wx_app.cpp  wx_frame.cpp  wx_panels.cpp
ws_agent/: CMakeLists.txt  Makefile  main.cpp  moc_window.cpp  qrc_ws_agent.cpp  window.h  window.ui  ws_agent  ws_agent.pro  ws_agent.qrc
ws_agent/ws_agent/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ws_agent.pro  ws_agent.qrc
ws_chat_qt/ws_chat_qt/: AuthForm.qml  AuthPage.qml  CMakeLists.txt  ChatPage.qml  NextChatPage.qml  activeroomsmodel.cpp  activeroomsmodel.h  appsettings.cpp  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  mainwindow.ui  popup.h  qmlmessage.cpp  qmlwebsocket.cpp  qmlwebsocket.h  res.qrc  serveresponse.cpp  serveresponse.h  stdfx.h  ws_chat_qt.pro
ws_client/: CMakeLists.txt  ws_client.pro
ws_client/include/: beast.h  global.h  iws_client.h  iws_client_global.h  net.h  stdafx.h  synch_session.h  ws_client.h  ws_session.h
ws_client/src/: iws_client.cpp  synch_session.cpp  ws_client.cpp  ws_session.cpp
ws_client_console/: .cproject  .project  CMakeLists.txt
ws_client_console/src/: main.cpp
ws_client_qml/: CMakeLists.txt  main.cpp  qml.qrc  ws_client.rc  ws_client_qml.pro
ws_client_qml/include/: clientsettings.h  qmlwebsocket.h
ws_drv/: CMakeLists.txt  CMakeLists.txt.org  README.md  install.sh
ws_drv_synh/: CMakeLists.txt
ws_server/: CMakeCache.txt  CMakeLists.txt  Makefile  build.sh  cmake_install.cmake  http_session.cpp  listener.cpp  main.cpp  shared_state.cpp  subscriber.cpp  websocket_session.cpp  ws_server.pro  ws_server.pro.user.a4b72c7
ws_systray/: CMakeLists.txt  main.cpp  window.cpp  ws_systray.pro
ws_webdav/: CMakeLists.txt  main.cpp
(+644 files in other folders)
