cmake_minimum_required(VERSION 3.20)
project(ws_solution)

add_subdirectory("${PROJECT_SOURCE_DIR}/ws_server" "${PROJECT_SOURCE_DIR}/ws_server/cmake-build-debug")
add_subdirectory("${PROJECT_SOURCE_DIR}/ws_client_console" "${PROJECT_SOURCE_DIR}/ws_client_console/cmake-build-debug")
#add_subdirectory("${PROJECT_SOURCE_DIR}/ws_admin_wx" "${PROJECT_SOURCE_DIR}/ws_admin_wx/cmake-build-debug")
add_subdirectory("${PROJECT_SOURCE_DIR}/ws_drv" "${PROJECT_SOURCE_DIR}/ws_drv/cmake-build-debug")
add_subdirectory("${PROJECT_SOURCE_DIR}/ws_client" "${PROJECT_SOURCE_DIR}/ws_client/cmake-build-debug")
add_subdirectory("${PROJECT_SOURCE_DIR}/ws_admin_qt/ws_admin_qt" "${PROJECT_SOURCE_DIR}/ws_admin_qt/ws_admin_qt/cmake-build-debug")
add_subdirectory("tests/ws_chat_qt/ws_chat_qt" "tests/ws_chat_qt/ws_chat_qt/cmake-build-debug")
add_subdirectory("${PROJECT_SOURCE_DIR}/tests/material/untitled" "${PROJECT_SOURCE_DIR}/tests/material/untitled/cmake-build-debug")
add_subdirectory("${PROJECT_SOURCE_DIR}/tests/TabBox/TabBox" "${PROJECT_SOURCE_DIR}/tests/TabBox/TabBox/cmake-build-debug")
add_subdirectory("${PROJECT_SOURCE_DIR}/arcirk" "${PROJECT_SOURCE_DIR}/arcirk/cmake-build-debug")
add_subdirectory("${PROJECT_SOURCE_DIR}/ws_client_qml/ws_gclient" "${PROJECT_SOURCE_DIR}/ws_client_qml/ws_gclient/cmake-build-debug")
add_subdirectory("${PROJECT_SOURCE_DIR}/ws_systray" "${PROJECT_SOURCE_DIR}/ws_systray/cmake-build-debug")