cmake_minimum_required(VERSION 3.20)
project(ws_solution)

add_subdirectory("${PROJECT_SOURCE_DIR}/ws_server" "${PROJECT_SOURCE_DIR}/ws_server/cmake-build-debug")
add_subdirectory("${PROJECT_SOURCE_DIR}/ws_client_console" "${PROJECT_SOURCE_DIR}/ws_client_console/cmake-build-debug")
add_subdirectory("${PROJECT_SOURCE_DIR}/ws_drv" "${PROJECT_SOURCE_DIR}/ws_drv/cmake-build-debug")
add_subdirectory("${PROJECT_SOURCE_DIR}/ws_client" "${PROJECT_SOURCE_DIR}/ws_client/cmake-build-debug")
add_subdirectory("${PROJECT_SOURCE_DIR}/ws_admin" "${PROJECT_SOURCE_DIR}/ws_admin/cmake-build-debug")
add_subdirectory("${PROJECT_SOURCE_DIR}/arcirk" "${PROJECT_SOURCE_DIR}/arcirk/cmake-build-debug")
add_subdirectory("${PROJECT_SOURCE_DIR}/ws_client_qml/ws_gclient" "${PROJECT_SOURCE_DIR}/ws_client_qml/ws_gclient/cmake-build-debug")
add_subdirectory("${PROJECT_SOURCE_DIR}/ws_agent/ws_agent" "${PROJECT_SOURCE_DIR}/ws_agent/ws_agent/cmake-build-debug")
add_subdirectory("${PROJECT_SOURCE_DIR}/qt_models/project" "${PROJECT_SOURCE_DIR}/qt_models/project/cmake-build-debug")
add_subdirectory("${PROJECT_SOURCE_DIR}/tests/btest" "${PROJECT_SOURCE_DIR}/tests/btest/cmake-build-debug")
add_subdirectory("tests/bconf" "${PROJECT_SOURCE_DIR}bconf/cmake-build-debug")