cmake_minimum_required(VERSION 3.22)
project(ws_solution)

add_subdirectory("${PROJECT_SOURCE_DIR}/ws_server" "${PROJECT_SOURCE_DIR}/ws_server/cmake-build-debug")
add_subdirectory("${PROJECT_SOURCE_DIR}/ws_client_console" "${PROJECT_SOURCE_DIR}/ws_client_console/cmake-build-debug")
add_subdirectory("${PROJECT_SOURCE_DIR}/ws_drv" "${PROJECT_SOURCE_DIR}/ws_drv/cmake-build-debug")
add_subdirectory("${PROJECT_SOURCE_DIR}/ws_drv_synh" "${PROJECT_SOURCE_DIR}/ws_drv_synh/cmake-build-debug")
add_subdirectory("${PROJECT_SOURCE_DIR}/ws_client" "${PROJECT_SOURCE_DIR}/ws_client/cmake-build-debug")
add_subdirectory("${PROJECT_SOURCE_DIR}/ws_admin" "${PROJECT_SOURCE_DIR}/ws_admin/cmake-build-debug")
add_subdirectory("${PROJECT_SOURCE_DIR}/arcirk" "${PROJECT_SOURCE_DIR}/arcirk/cmake-build-debug")
add_subdirectory("${PROJECT_SOURCE_DIR}/ws_client_qml" "${PROJECT_SOURCE_DIR}/ws_client_qml/cmake-build-debug")
add_subdirectory("${PROJECT_SOURCE_DIR}/ws_agent/ws_agent" "${PROJECT_SOURCE_DIR}/ws_agent/ws_agent/cmake-build-debug")
add_subdirectory("${PROJECT_SOURCE_DIR}/qt_models/project" "${PROJECT_SOURCE_DIR}/qt_models/project/cmake-build-debug")
add_subdirectory("${PROJECT_SOURCE_DIR}/sqlwrapper" "${PROJECT_SOURCE_DIR}/sqlwrapper/x64-static")
add_subdirectory("${PROJECT_SOURCE_DIR}/mpl" "${PROJECT_SOURCE_DIR}/mpl/cmake-build-debug")
add_subdirectory("${PROJECT_SOURCE_DIR}/wdc" "${PROJECT_SOURCE_DIR}/wdc/cmake-build-debug")
add_subdirectory("${PROJECT_SOURCE_DIR}/certmanager/CertManager" "${PROJECT_SOURCE_DIR}/certmanager/CertManager/cmake-build-debug")